# libdvx

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  Doxyfile  ReadMe.md  build.json  compile_flags.txt  core_api.cpp  core_api.h  decoder.json  decoder_cli.json  decoder_wasm.json  dvx_core.h  dvx_core_api.cpp  dvx_core_api.h  dvx_platform_qt.cpp  dvx_platform_tq.cpp  dvx_stream.cpp  dvx_stream.h  encoder.json  encoder_cli.json  libdvx.h  libdvx_global.h  qcore.cpp  qcore.h  qt-core_global.h
cli/: dvx_decoder.cpp  dvx_encoder.cpp
html/: embed.html  live.html  player.html
inc/: dvx_core_api.h  dvx_format.h  dvx_formats.h  dvx_lca.h  dvx_stream.h  libdvx_global.h
src/: dvx_core_api.cpp  dvx_decoder.cpp  dvx_main.cpp  dvx_platform_tq.cpp  dvx_stream.cpp  dvx_tq_codec.cpp  dvx_tq_encoding.cpp  dvx_tq_multiplexing.cpp
src/amd64/: dvx_tq_compress.s  dvx_tq_decompress.s
